[tool.poetry]
name = "tanks"
version = "0.1.0"
description = ""
authors = ["Oleksandr Masalykin <masalykin1983@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
